# cFinalWork

./: .gitignore  CMakeLists.txt  a.out  courses.txt  main  main.c  students.txt  test  test_combo.c
Cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  StudentManagementSystem  app  build.ninja  cmake_install.cmake  compile_commands.json  courses.txt
Cmake/.cmake/api/v1/reply/: cache-v2-1ea3836b8d8f250338fc.json  cache-v2-49369ac3878dae4defe8.json  cmakeFiles-v1-8bf322a1fdbab0fd7ece.json  cmakeFiles-v1-d76ebb7698d52ca81da4.json  codemodel-v2-9299e4316a7ac41d3ddf.json  codemodel-v2-dd8fb7f042b343fc3bf1.json  index-2026-05-19T12-27-29-0429.json  index-2026-06-17T08-33-58-0120.json  target-StudentManagementSystem-Debug-ae18df1dbd003eda4c5c.json  target-app-Debug-0b4d348b1b4e3d2b6413.json  toolchains-v1-0d47e80188318381afc0.json
data/: students.txt
include/: app_paths.h  model.h  service.h  storage.h  ui.h
src/: app_paths.c  data_manager.c  data_manager.h  main.c  model.c  models.h  service.c  storage.c  ui.c  ui.h
tests/: test.c
